<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Book Minder</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    <string name="author_add">Add</string>
    <string name="author_edit">Edit</string>
    <string name="author_books">Books</string>

    <string name="header_title_authors" >Authors</string> 
    <string name="header_title_books">Books</string> 
    
    <string name="menu_edit_new">New</string> 
    <string name="menu_author_modify">Modify Author</string> 
    <string name="menu_author_delete">Remove Author</string> 
    
    <string name="tv_author_first_name">First Name: </string>    
    <string name="hint_author_first_name">enter first name&#8230;</string>    
    <string name="tv_author_last_name">Last Name: </string>    
    <string name="hint_author_last_name">enter last name&#8230;</string>    
    
    <string name="btn_cancel">Cancel</string>
    <string name="btn_done">Done</string>
    <string name="btn_save">Save</string>
    <string name="btn_add">Add</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_no">No</string>
    
    <string name="btn_authors" >Authors</string> 
    <string name="btn_books" >Books</string> 
    
    
    <string name="delete_author_confirm_title">Delete Confirm</string>
	<string name="delete_author_confirm_message">You have chosen to delete this author.  There ~~ associated with this Author.  If you delete the author the books will be deleted too.\n\nAre you sure you want to delete this Author and the associated books? </string>
    
    
	
	<!-- 
			B O O K   D E T A I L S
	 --> 
    <string name="caption_title">Title:</string>
    <string name="caption_year">Year:</string>
    <string name="caption_author">Author:</string>
    <string name="caption_sub_author">Sub Author:</string>
    <string name="caption_read_it">Read it:</string>
    <string name="caption_own_it">Own It:</string>
    <string name="caption_series">Series</string>
    
    <string name="hint_title">enter title&#8230;</string>
    <string name="hint_year">enter year&#8230;</string>
    <string name="hint_author">select author&#8230;</string>
    <string name="hint_sub_author">select sub author&#8230;</string>
    <string name="hint_series">select series&#8230;</string>
        
</resources>
